# console-qrencode

./: .gitignore  README.md
qrencode/: qrencode.sln
qrencode/Linux64/: libpng16.so.16  libqrencode.so.3  waqrencode
qrencode/MacOS/: libqrencode.3.dylib  libz.1.dylib  waqrencode
qrencode/Windows32/: libpng16-16.lib  libqrencode-3.lib  zlib1.lib
qrencode/Windows64/: libpng16-16.lib  libqrencode-3.lib  zlib1.lib
qrencode/include/: unistd.h  utf8.cc
qrencode/libpng/: libpng.vcxproj  libpng.vcxproj.filters
qrencode/libqrencode/: libqrencode.vcxproj  libqrencode.vcxproj.filters
qrencode/qrencode/: qrencode.vcxproj
qrencode/waqrencode/: Makefile.am  Makefile.in  configure  configure.ac  configure.scan  waqrencode.cc  waqrencode.h  waqrencode.vcxproj  waqrencode.vcxproj.filters
qrencode/waqrencode/autom4te.cache/: output.0  requests  traces.0
qrencode/zlib/: zlib.vcxproj  zlib.vcxproj.filters
